2012-03-02  Peter Bergner  <bergner@vnet.ibm.com>

	Backport from mainline
	2012-03-02  Peter Bergner  <bergner@vnet.ibm.com>

	* config/rs6000/vsx.md (vsx_set_<mode>): Reorder operands.

2012-03-02  Richard Guenther  <rguenther@suse.de>

	* DEV-PHASE: Set to prerelease.

2012-03-01  Richard Earnshaw  <rearnsha@arm.com>

	* config.gcc (obsolete): Add all ARM targets using the FPA.
	(with_fpu): Obsolete selection of the FPA or Maverick on ARM.
	* doc/install.texi: Avoid references to obsolete ARM ports.

2012-03-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	* config/epiphany/epiphany.md (movmisalign<mode>): New patterns.

2012-03-01  Jeremy Bennett  <jeremy.bennett@embecosm.com>
	    Joern Rennecke  <joern.rennecke@embecosm.com>

	* doc/extend.texi: Expand and update information on interrupt
	attribute for Epiphany.

2012-03-01  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/sh-protos.h: Update copyright notice dates.
	* config/sh/sh.h: Likewise.
	* config/sh/sh.md: Likewise.
	* config/sh/constraints.md: Likewise.
	* config/sh/predicates.md: Likewise.

2012-03-01  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/sh-protos.h (tertiary_reload_operand): Remove dead function.
	* config/sh/sh.c (tertiary_reload_operand): Likewise.

2012-03-01  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/constraints.md: Fix comment typo.

2012-03-01  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/52408
	* config/pa/pa.md (zvdep_imm32): Change type of variable x from int to
	unsigned HOST_WIDE_INT.
	(zvdep_imm64): Likewise.
	(vdepi_ior): Change type of variable x from int to HOST_WIDE_INT.
	(vdepi_and): Likewise.
	Likewise for unamed 64-bit patterns.
	* config/pa/predicates.md (lhs_lshift_cint_operand): Update comment.

2012-03-01  Alexandre Oliva  <aoliva@redhat.com>

	PR debug/52001
	PR rtl-optimization/52417
	* cselib.c (cselib_any_perm_equivs): New variable.
	(cselib_reset_table): Check that it's not set when not
	preserving constants.