@@ -1,3 +1,9 @@
+2012-03-02  Richard Henderson  <rth@redhat.com>
+
+	* optabs.c (expand_atomic_test_and_set): Honor
+	atomic_test_and_set_trueval even when atomic_test_and_set
+	optab is not in use.
+
 2012-03-02  Peter Bergner  <bergner@vnet.ibm.com>
 
 	Backport from mainline
